fix(many): rest url + colors

--- a/css/index.css
+++ b/css/index.css
@@ -38,19 +38,19 @@ body {
 
 /* SURCHARGE JQUERY MOBILE COLORS */
 .ui-page-theme-a a, html .ui-bar-a a, html .ui-body-a a, html body .ui-group-theme-a a {
-	color: #EE9A4D !important;
+	color: #00AAAD !important;
 }
 .ui-page-theme-a a:visited, html .ui-bar-a a:visited, html .ui-body-a a:visited, html body .ui-group-theme-a a:visited {
-	color: #AB5B11 !important;
+	color: #4f8093 !important;
 }
 .ui-page-theme-a a:hover, html .ui-bar-a a:hover, html .ui-body-a a:hover, html body .ui-group-theme-a a:hover {
 	color: #DC7C24 !important;
 }
 .ui-page-theme-a .ui-btn.ui-btn-active, html .ui-bar-a .ui-btn.ui-btn-active, html .ui-body-a .ui-btn.ui-btn-active, html body .ui-group-theme-a .ui-btn.ui-btn-active, html head+body .ui-btn.ui-btn-a.ui-btn-active, .ui-page-theme-a .ui-checkbox-on:after, html .ui-bar-a .ui-checkbox-on:after, html .ui-body-a .ui-checkbox-on:after, html body .ui-group-theme-a .ui-checkbox-on:after, .ui-btn.ui-checkbox-on.ui-btn-a:after, .ui-page-theme-a .ui-flipswitch-active, html .ui-bar-a .ui-flipswitch-active, html .ui-body-a .ui-flipswitch-active, html body .ui-group-theme-a .ui-flipswitch-active, html body .ui-flipswitch.ui-bar-a.ui-flipswitch-active, .ui-page-theme-a .ui-slider-track .ui-btn-active, html .ui-bar-a .ui-slider-track .ui-btn-active, html .ui-body-a .ui-slider-track .ui-btn-active, html body .ui-group-theme-a .ui-slider-track .ui-btn-active, html body div.ui-slider-track.ui-body-a .ui-btn-active {
-	background-color:#EE9A4D !important;
-	border-color:#EE9A4D !important;
+	background-color:#00AAAD !important;
+	border-color:#00AAAD !important;
 	color: white;
-	text-shadow: 0 1px 0 #AB5B11;
+	text-shadow: 0 1px 0 #4f8093;
 }
 .ui-input-text input, .ui-input-search input {
 	font-size: 16px;
@@ -62,7 +62,7 @@ body {
 
 .page-header {
 	/*margin: 20px 0px 20px !important;*/
-	border-bottom:2px dotted #EE9A4D !important;
+	border-bottom:2px dotted #00AAAD !important;
 }
 
 
@@ -125,7 +125,7 @@ body {
     /*position:absolute; */
     /*margin:0px;*/
     overflow:visible;
-    /*background-color:#EE9A4D;
+    /*background-color:#00AAAD;
     border-color:#AF7817;*/
     color: #ffffff !important;
     /*margin: 0px -15px 20px !important;*/
@@ -221,7 +221,7 @@ body {
 }
 
 .thankyoupage a {
-	color:#EE9A4D;
+	color:#00AAAD;
 	font-weight: bold;
 }
 
@@ -252,7 +252,7 @@ body {
 	.well;
 	.lead;
 	font-weight: bold;
-	color: #EE9A4D;
+	color: #00AAAD;
 }
 
 #msg .alert-heading {
@@ -311,7 +311,7 @@ input:required:hover {
 }
 
 #form-cot_admin .exergue {
-	background-color:#EE9A4D;
+	background-color:#00AAAD;
 	font-weight: bold;
 	font-size: 18px;
 }
