--- a/css/index.css
+++ b/css/index.css
@@ -73,18 +73,30 @@ body {
 }
 
 /*send button*/
-#btn-send {
+#btn-send.invalid {
     color: #555559 !important;
     font-size: 20pt;
     text-shadow: 3px 3px #FF8A80;
     padding: 10px 10px;
 }
 
-#btn-send-valid {
+#btn-send.valid {
     color: #555559 !important;
     font-size: 20pt;
     text-shadow: 3px 3px #00A802;
     padding: 10px 10px;
+    -webkit-animation: grow 2s;
+}
+@-webkit-keyframes grow {
+    0% {
+        -webkit-transform: scale( 1 );-moz-transform: scale( 1 );-o-transform: scale( 1 );-ms-transform: scale( 1 );transform: scale( 1 );
+    }
+    50% {
+        -webkit-transform: scale( 1.3 );-moz-transform: scale( 1.3 );-o-transform: scale( 1.3 );-ms-transform: scale( 1.3 );transform: scale( 1.3 );
+    }
+    100% {
+        -webkit-transform: scale( 1 );-moz-transform: scale( 1 );-o-transform: scale( 1 );-ms-transform: scale( 1 );transform: scale( 1 );
+    }
 }
 /*reload button*/
 #btn-reload {
@@ -341,10 +353,10 @@ input:required {
  * style input elements that have a required
  * attribute and a focus state
  */
-input:required:focus {
+/*input:required:focus {
   border: 1px solid red;
   outline: none;
-}
+}*/
 
 /**
  * style input elements that have a required
